refactor: change references to yayarl

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,11 @@ requires = [
 build-backend = "setuptools.build_meta"
 
 [tool.towncrier]
-package = "yarl"
+package = "yayarl"
 filename = "CHANGES.rst"
 directory = "CHANGES/"
 title_format = "{version} ({project_date})"
-issue_format = "`#{issue} <https://github.com/aio-libs/yarl/issues/{issue}>`_"
+issue_format = "`#{issue} <https://github.com/robinvandernoord/yayarl/issues/{issue}>`_"
 
 
 [tool.cibuildwheel]
