--- a/setup.cfg
+++ b/setup.cfg
@@ -4,18 +4,18 @@
 universal = 0
 
 [metadata]
-name = yarl
-version = attr: yarl.__version__
-url = https://github.com/aio-libs/yarl
+name = yayarl
+version = attr: yayarl.__version__
+url = https://github.com/robinvandernoord/yayarl
 project_urls =
-  Chat: Matrix = https://matrix.to/#/#aio-libs-space:matrix.org
-  CI: GitHub Workflows = https://github.com/aio-libs/yarl/actions?query=branch:master
-  Code of Conduct = https://github.com/aio-libs/.github/blob/master/CODE_OF_CONDUCT.md
-  Coverage: codecov = https://codecov.io/github/aio-libs/yarl
-  Docs: Changelog = https://github.com/aio-libs/yarl/blob/master/CHANGES.rst#changelog
+  Chat: Matrix = https://matrix.to/#/#robinvandernoord-space:matrix.org
+  CI: GitHub Workflows = https://github.com/robinvandernoord/yayarl/actions?query=branch:master
+  Code of Conduct = https://github.com/robinvandernoord/.github/blob/master/CODE_OF_CONDUCT.md
+  Coverage: codecov = https://codecov.io/github/robinvandernoord/yayarl
+  Docs: Changelog = https://github.com/robinvandernoord/yayarl/blob/master/CHANGES.rst#changelog
   Docs: RTD = https://yarl.aio-libs.org
-  GitHub: issues = https://github.com/aio-libs/yarl/issues
-  GitHub: repo = https://github.com/aio-libs/yarl
+  GitHub: issues = https://github.com/robinvandernoord/yayarl/issues
+  GitHub: repo = https://github.com/robinvandernoord/yayarl
 description = Yet another URL library
 # long_description = file: README.rst, CHANGES.rst
 long_description_content_type = text/x-rst
@@ -36,11 +36,9 @@ classifiers =
   Programming Language :: Cython
   Programming Language :: Python
   Programming Language :: Python :: 3
-  Programming Language :: Python :: 3.7
-  Programming Language :: Python :: 3.8
-  Programming Language :: Python :: 3.9
   Programming Language :: Python :: 3.10
   Programming Language :: Python :: 3.11
+  Programming Language :: Python :: 3.12
 
   Topic :: Internet :: WWW/HTTP
   Topic :: Software Development :: Libraries :: Python Modules
@@ -48,16 +46,17 @@ keywords =
   cython
   cext
   yarl
+  yayarl
 
 [options]
-python_requires = >=3.7
+python_requires = >=3.10
 # Ref:
 # https://setuptools.readthedocs.io/en/latest/setuptools.html#using-a-src-layout
 # (`src/` layout)
 # package_dir =
 #   = src
 packages =
-  yarl
+  yayarl
 # https://setuptools.readthedocs.io/en/latest/setuptools.html#setting-the-zip-safe-flag
 zip_safe = False
 include_package_data = True
@@ -81,11 +80,11 @@ install_requires =
 
 
 [tool:pytest]
-addopts = --cov=yarl -v
+addopts = --cov=yayarl -v
 norecursedirs = dist docs build .tox .eggs venv virtualenv .git
 minversion = 3.8.2
 testpaths = tests/
-junit_suite_name = yarl_test_suite
+junit_suite_name = yayarl_test_suite
 filterwarnings =
     error
     # https://github.com/pytest-dev/pytest/issues/10977 and https://github.com/pytest-dev/pytest/pull/10894
