docs: updated readme and changelog

--- a/setup.cfg
+++ b/setup.cfg
@@ -65,6 +65,7 @@ install_requires =
   idna >= 2.0
   multidict >= 4.0
   typing-extensions >= 3.7.4; python_version < "3.8"
+  requests ~= 2.31.0
 
 [options.package_data]
 # Ref:
