docs: fix markdown -> rst and pypi short description

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,13 +16,13 @@ project_urls =
   Docs: RTD = https://yarl.aio-libs.org
   GitHub: issues = https://github.com/robinvandernoord/yayarl/issues
   GitHub: repo = https://github.com/robinvandernoord/yayarl
-description = Yet another URL library
+description = "Yet another YARL"; A fork with `requests` integration
 # long_description = file: README.rst, CHANGES.rst
 long_description_content_type = text/x-rst
-author = Andrew Svetlov
-author_email = andrew.svetlov@gmail.com
-maintainer = aiohttp team <team@aiohttp.org>
-maintainer_email = team@aiohttp.org
+author = Robin van der Noord
+author_email = robin@trialandsuccess.nl
+maintainer = Robin van der Noord <team@aiohttp.org>
+maintainer_email = robin@trialandsuccess.nl
 license = Apache-2.0
 license_files =
   LICENSE
